--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
   },
   "homepage": "https://github.com/CodeShala/codeshala.org#readme",
   "dependencies": {
+    "aws-sdk": "^2.205.0",
     "ejs": "2.5.7",
-    "express": "4.16.2"
+    "express": "4.16.2",
+    "node-uuid": "^1.4.8"
   }
 }
