--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "express-validator": "^5.0.3",
     "joi": "^13.1.2",
     "node-uuid": "^1.4.8",
+    "path": "^0.12.7",
     "uuid": "^3.2.1"
   }
 }
