--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "serve": "node index"
+    "serve": "node index",
+    "start": "node index.js"
   },
   "repository": {
     "type": "git",
