--- a/package.json
+++ b/package.json
@@ -23,7 +23,13 @@
   },
   "homepage": "https://github.com/CodeShala/codeshala.org#readme",
   "dependencies": {
+    "connect-ensure-login": "0.1.1",
+    "cookie-parser": "1.4.3",
     "ejs": "2.5.7",
-    "express": "4.16.2"
+    "express": "4.16.2",
+    "express-session": "1.15.6",
+    "morgan": "1.9.0",
+    "passport": "0.4.0",
+    "passport-local": "1.0.0"
   }
 }
