--- a/.gitignore
+++ b/.gitignore
@@ -56,3 +56,11 @@ typings/
 
 # WebStorm
 .idea
+
+# Elastic Beanstalk Files
+.elasticbeanstalk/*
+
+!.elasticbeanstalk/*.cfg.yml
+
+!.elasticbeanstalk/*.global.yml
+
