Login page for dashboard completed

--- a/.env
+++ b/.env
@@ -2,3 +2,4 @@ PORT=3000
 MLAB_DB_URI=mongodb://codeshala:secret@ds237989.mlab.com:37989/codeshala-staging
 ADMIN_USERNAME=codeshala
 ADMIN_PASSWORD=secret
+ACCOUNTKIT_SECRET=f7258df332cc7c7e4767eb863bedf2ab
