Gulp Task Automation Installed

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "gulp",
     "serve": "node index",
     "start": "node index.js"
   },
@@ -37,5 +38,12 @@
     "passport-local": "1.0.0",
     "request": "2.85.0",
     "web-push": "3.3.0"
+  },
+  "devDependencies": {
+    "gulp": "3.9.1",
+    "gulp-cssmin": "0.2.0",
+    "gulp-imagemin": "4.1.0",
+    "gulp-rename": "1.2.2",
+    "gulp-uglify": "3.0.0"
   }
 }
