--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "web-push": "3.3.0"
   },
   "devDependencies": {
+    "csslint": "1.0.5",
     "gulp": "3.9.1",
     "gulp-cssmin": "0.2.0",
     "gulp-imagemin": "4.1.0",
