--- a/static/assets/favicon/manifest.json
+++ b/static/assets/favicon/manifest.json
@@ -1,38 +1,45 @@
 {
- "name": "App",
+ "name": "Codeshala",
+ "short_name": "Codeshala",
+ "start_url": ".",
+ "display": "standalone",
+ "background_color": "#f3f3f3",
+ "theme_color": "#f3f3f3",
+ "description": "Get Better At Programing By Joining The Best programing courses in Delhi NCR",
+ "orientation": "portrait-primary",
  "icons": [
   {
-   "src": "\/android-icon-36x36.png",
+   "src": "\/assets\/favicon\/android-icon-36x36.png",
    "sizes": "36x36",
    "type": "image\/png",
    "density": "0.75"
   },
   {
-   "src": "\/android-icon-48x48.png",
+   "src": "\/assets\/favicon\/android-icon-48x48.png",
    "sizes": "48x48",
    "type": "image\/png",
    "density": "1.0"
   },
   {
-   "src": "\/android-icon-72x72.png",
+   "src": "\/assets\/favicon\/android-icon-72x72.png",
    "sizes": "72x72",
    "type": "image\/png",
    "density": "1.5"
   },
   {
-   "src": "\/android-icon-96x96.png",
+   "src": "\/assets\/favicon\/android-icon-96x96.png",
    "sizes": "96x96",
    "type": "image\/png",
    "density": "2.0"
   },
   {
-   "src": "\/android-icon-144x144.png",
+   "src": "\/assets\/favicon\/android-icon-144x144.png",
    "sizes": "144x144",
    "type": "image\/png",
    "density": "3.0"
   },
   {
-   "src": "\/android-icon-192x192.png",
+   "src": "\/assets\/favicon\/android-icon-192x192.png",
    "sizes": "192x192",
    "type": "image\/png",
    "density": "4.0"
