Codeshala leaderboard https://github.com/CodeShala/codeshala.org/issues/29

--- a/.env
+++ b/.env
@@ -3,3 +3,5 @@ MLAB_DB_URI=mongodb://codeshala:secret@ds237989.mlab.com:37989/codeshala-staging
 ADMIN_USERNAME=codeshala
 ADMIN_PASSWORD=secret
 ACCOUNTKIT_SECRET=qwertyqwertyqwertyqwertyqwertyxx
+HACKEREARTH_RECRUITER_CLIENTID=qwertyqwertyqwertyqwertyqwertyxx.api.hackerearth.com
+HACKEREARTH_RECRUITER_SECRET=qwertyqwertyqwertyqwertyqwertyxx
