--- a/static/manifest.json
+++ b/static/manifest.json
@@ -1,7 +1,7 @@
 {
  "name": "Codeshala",
  "short_name": "Codeshala",
- "start_url": "\/",
+ "start_url": "\/?utm_source=web_app",
  "display": "standalone",
  "background_color": "#f3f3f3",
  "theme_color": "#f3f3f3",
@@ -43,6 +43,12 @@
    "sizes": "192x192",
    "type": "image\/png",
    "density": "4.0"
+  },
+  {
+   "src": "\/assets\/favicon\/android-icon-512x512.png",
+   "sizes": "512x512",
+   "type": "image\/png",
+   "density": "5.0"
   }
  ]
 }
