--- a/.env
+++ b/.env
@@ -2,6 +2,8 @@ PORT=3000
 MLAB_DB_URI=mongodb://codeshala:secret@ds237989.mlab.com:37989/codeshala-staging
 ADMIN_USERNAME=codeshala
 ADMIN_PASSWORD=secret
+MAILER_EMAIL=contact@codeshala.org
+MAILER_PASSWORD=secret
 ACCOUNTKIT_SECRET=qwertyqwertyqwertyqwertyqwertyxx
 HACKEREARTH_RECRUITER_CLIENTID=qwertyqwertyqwertyqwertyqwertyxx.api.hackerearth.com
 HACKEREARTH_RECRUITER_SECRET=qwertyqwertyqwertyqwertyqwertyxx
