--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "dotenv": "5.0.1",
     "ejs": "2.5.8",
     "express": "4.16.2",
-    "express-session": "1.15.6",
+    "express-session": "^1.15.6",
     "mongoose": "5.0.11",
     "morgan": "1.9.0",
     "passport": "0.4.0",
@@ -40,8 +40,7 @@
     "web-push": "3.3.0",
     "nodemailer": "^4.6.7",
     "connect-flash": "^0.1.1",
-    "express-validator": "^5.2.0",
-    "express-session": "^1.15.6"
+    "express-validator": "^5.2.0"
   },
   "devDependencies": {
     "csslint": "1.0.5",
